FIXED: discrepency between input and correct answer after question 2. ISSUE: i didn't remove the eventlistener between questions so it would run twice every click. TIME SPENT TROUBLESHOOTING: too long lol

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,3 +55,7 @@
     width: 15rem;
     height: 2rem;
 }
+
+.endOfGame{
+  
+}
